src/objects/ACCL__Order_Item__c.object
<CustomObject>
    <description>Holds the details of the order item object.</description>
    <fields>
        <fullName>ACCL__Base_Price_Receipt__c</fullName>
        <description>Basic product price in receipt currency.</description>
        <label>Base Price Receipt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Base_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Stores the Value of the item, specified in the  appropriate product condition.</description>
        <label>Base Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Check_In_Reason_Code__c</fullName>
        <description>Allows specification of a reason if the checked in product quantity does not fit to the expected product quantity given via product inventory.</description>
        <label>Check In Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Broken</fullName>
                </value>
                <value>
                    <fullName>Stolen</fullName>
                </value>
                <value>
                    <fullName>Miscounting</fullName>
                </value>
                <value>
                    <fullName>NoDoc</fullName>
                </value>
                <value>
                    <fullName>Misc.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Consumer_Quantity__c</fullName>
        <description>The ordered quantity expressed in consumer quantity units</description>
        <label>Consumer Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Manual discount given by the user.</description>
        <label>Discount</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MDLZ_SAPRejectionCode__c</fullName>
        <description>Rejection code from SAP</description>
        <label>SAP Rejection Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Erp_Id__c</fullName>
        <description>Id of this order entry for the ERP system.</description>
        <label>Erp Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Free_Item_Creation_Step__c</fullName>
        <description>Holds a reference to the step which generates the free item</description>
        <label>Free Item Creation Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Gross_Value_Receipt__c</fullName>
        <description>Gross value in receipt currency.</description>
        <label>Gross Value Receipt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__History__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The item, which has been added to the disposal list, has been ordered in a former sales document. (The item belongs to a former sales document of the same business partner and of the same sales document template.)</description>
        <label>History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Left_Quantity__c</fullName>
        <description>Item quantity left on the truck after product check in</description>
        <label>Left Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Listed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True, if product exists in an authorization list of the orderer.</description>
        <label>Listed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Modification_Reason__c</fullName>
        <description>Specifies a reason if preordered product quantity has been modified on mobility device.</description>
        <inlineHelpText>Attribute at present not used.</inlineHelpText>
        <label>Modification Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>More</fullName>
                </value>
                <value>
                    <fullName>Less</fullName>
                </value>
                <value>
                    <fullName>WrongPrd</fullName>
                </value>
                <value>
                    <fullName>IncOrder</fullName>
                </value>
                <value>
                    <fullName>DmgByDriver</fullName>
                </value>
                <value>
                    <fullName>Nopayment</fullName>
                </value>
                <value>
                    <fullName>TMStock</fullName>
                </value>
                <value>
                    <fullName>WrDel</fullName>
                </value>
                <value>
                    <fullName>FGReturn</fullName>
                </value>
                <value>
                    <fullName>BadPrd</fullName>
                </value>
                <value>
                    <fullName>OutTrStock</fullName>
                </value>
                <value>
                    <fullName>TckTransfer</fullName>
                </value>
                <value>
                    <fullName>MissCount</fullName>
                </value>
                <value>
                    <fullName>Misc</fullName>
                </value>
                <value>
                    <fullName>CpFailed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Order_Item_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the order item template where order item is associated with</description>
        <label>Order Item Template</label>
        <referenceTo>ACCL__Order_Item_Template__c</referenceTo>
        <relationshipLabel>Order Items</relationshipLabel>
        <relationshipName>Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Order__c</fullName>
        <description>ID of the order where Order Item is associated with</description>
        <label>Order</label>
        <referenceTo>ACCL__Order__c</referenceTo>
        <relationshipLabel>Order Items</relationshipLabel>
        <relationshipName>Order_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACCL__Out_Of_Stock__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether the product is out of stock.</description>
        <label>Out Of Stock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Parent_Order_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to a parent order item (e.g. in case of free item: the ordered item that caused the free item). Used in complex pricing on mobility devices.</description>
        <label>Parent_Order_Item</label>
        <referenceTo>ACCL__Order_Item__c</referenceTo>
        <relationshipLabel>Parent Order Items</relationshipLabel>
        <relationshipName>Parent_Order_Item</relationshipName>
        <type>Lookup</type>
    </fields>
	<fields>
        <fullName>MDLZ_BkpItemStatus__c</fullName>
        <label>Bkp Item Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Empty</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
	<fields>
        <fullName>MDLZ_BkpSuggestedQty__c</fullName>
        <label>Bkp Suggested Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Parent_Type__c</fullName>
        <description>Defines the to which parent the free item is related. Can be related to a order item then Parent_Order_Item is filled and the type is order. If free item is related to Order header type is &quot;Order&quot;.</description>
        <label>Parent Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Item</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Reward</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Price_Receipt__c</fullName>
        <description>Calculated price of the item in the receipt/document currency.</description>
        <label>Price Receipt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Price__c</fullName>
        <description>Calculated price of the item in the domestic currency.</description>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Pricing_Info_1__c</fullName>
        <label>Pricing Info 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
<fields>
        <fullName>ACCL__Pricing_Info_10__c</fullName>
        <label>Pricing Info 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Pricing_Info_2__c</fullName>
        <label>Pricing Info 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Pricing_Information__c</fullName>
        <description>Holds the pricing information (found conditions) which are directly related to the order item.</description>
        <label>Pricing Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACCL__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product ID of selected product</description>
        <label>Product</label>
        <referenceTo>ACCL__Product__c</referenceTo>
        <relationshipLabel>Order Items</relationshipLabel>
        <relationshipName>Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Promoted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if a promotion exists in the relevant period.</description>
        <label>Promoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Promotion_Reward__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relation to the reward if order item was granted by a reward.</description>
        <label>Promotion Reward</label>
        <referenceTo>ACCL__Promotion_Reward__c</referenceTo>
        <relationshipLabel>Order Items</relationshipLabel>
        <relationshipName>Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Promotion__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Reference to promotion if the product of the item originates from a selectable promotion</description>
        <label>Promotion</label>
        <referenceTo>ACCL__Promotion__c</referenceTo>
        <relationshipLabel>Order Items</relationshipLabel>
        <relationshipName>Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Quantity for this product.</description>
        <label>Quantity</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Record_Link__c</fullName>
        <description>Hyperlink for the detail page of the record</description>
        <formula>HYPERLINK(&quot;/&quot; &amp;Id, $Label.ACCL__record_link, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Special_Price_Receipt__c</fullName>
        <description>The attribute specifies a reduced price for an item that is used for the item value calculation if specified. The attribute can only be edited, if the Order item template allows the consideration of the special price.</description>
        <label>Special Price Receipt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Special_Price__c</fullName>
        <description>The attribute specifies a reduced price for an item that is used for the item value calculation if specified. The attribute can only be edited, if the sales document item template allows the consideration of the special price.</description>
        <label>Special Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Suggested_Quantity__c</fullName>
        <description>The value contains the suggested order quantity that has been calculated via algorithm or that is given by a relevant promotion.</description>
        <label>Suggested Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Target_Quantity__c</fullName>
        <description>Product checkout quantity for the tour in question as given by the HOST interface.</description>
        <label>Target Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__UoM__c</fullName>
        <description>Stands for &apos;Unit Of Measure&apos;</description>
        <label>UoM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ConsumerUnit</fullName>
                </value>
                <value>
                    <fullName>SalesUnit</fullName>
                </value>
                <value>
                    <fullName>Pallet</fullName>
                </value>
                <value>
                    <fullName>Layer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Value_Receipt__c</fullName>
        <description>Calculated value of the item in the receipt/document currency.</description>
        <label>Value Receipt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Value__c</fullName>
        <description>Calculated value of the item in the domestic currency.</description>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Voided__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This attribute indicates if a disposal list item is voided.</description>
        <label>Voided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDLZ_CodeDate__c</fullName>
        <label>Code Date</label>
        <type>Date</type>
    </fields>
	 <fields>
        <fullName>MDLZ_SAPExternalID__c</fullName>
        <externalId>true</externalId>
        <label>SAP External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MDLZ_CreditReasonCode__c</fullName>
        <label>Credit Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>03 - DSD Shelf-Life Code Expired</fullName>
                </value>
                <value>
                    <fullName>04 - DSD Infest, Water, Fire</fullName>
                </value>
                <value>
                    <fullName>07 - DSD Product Recall</fullName>
                </value>
                <value>
                    <fullName>36 - DSD Glue Related Issues</fullName>
                </value>
                <value>
                    <fullName>38 - DSD Delivered Out of Code</fullName>
                </value>
                <value>
                    <fullName>40 - DSD Pallet Damage</fullName>
                </value>
                <value>
                    <fullName>41 - DSD Sticker Damage</fullName>
                </value>
                <value>
                    <fullName>42 - DSD Handling Damage</fullName>
                </value>
                <value>
                    <fullName>43 - DSD Shrink Wrap Damage</fullName>
                </value>
                <value>
                    <fullName>44 - DSD Open Seals</fullName>
                </value>
                <value>
                    <fullName>45 - DSD Unknown Damage</fullName>
                </value>
                <value>
                    <fullName>46 - DSD All Other MFG Damage</fullName>
                </value>
                <value>
                    <fullName>47 - DSD Consumer Return</fullName>
                </value>
                <value>
                    <fullName>01 - DSD Overstock</fullName>
                </value>
                <value>
                    <fullName>15 - DSD Did Not Order</fullName>
                </value>
                <value>
                    <fullName>16 - DSD Discontinued</fullName>
                </value>
                <value>
                    <fullName>18 - DSD Short on Delivery</fullName>
                </value>
                <value>
                    <fullName>23 - DSD Customer Refused</fullName>
                </value>
                <value>
                    <fullName>02 - DSD Damaged in Store</fullName>
                    <isActive>false</isActive>
                    <label>02 - DSD Damaged in Store</label>
                </value>
                <value>
                    <fullName>08 - DSD Allowance not given</fullName>
                    <isActive>false</isActive>
                    <label>08 - DSD Allowance not given</label>
                </value>
                <value>
                    <fullName>11 - DSD Missed Distributor Deduction</fullName>
                    <isActive>false</isActive>
                    <label>11 - DSD Missed Distributor Deduction</label>
                </value>
                <value>
                    <fullName>12 - DSD Missed Efficiency Deduction</fullName>
                    <isActive>false</isActive>
                    <label>12 - DSD Missed Efficiency Deduction</label>
                </value>
                <value>
                    <fullName>14 - DSD Honor Receiving</fullName>
                    <isActive>false</isActive>
                    <label>14 - DSD Honor Receiving</label>
                </value>
                <value>
                    <fullName>17 - DSD DAMAGED</fullName>
                    <isActive>false</isActive>
                    <label>17 - DSD DAMAGED</label>
                </value>
                <value>
                    <fullName>19 - DSD PRODUCT NOT AUTHORIZED</fullName>
                    <isActive>false</isActive>
                    <label>19 - DSD PRODUCT NOT AUTHORIZED</label>
                </value>
                <value>
                    <fullName>20 - DSD NOT USED</fullName>
                    <isActive>false</isActive>
                    <label>20 - DSD NOT USED</label>
                </value>
                <value>
                    <fullName>21 - DSD NO RECEIVER</fullName>
                    <isActive>false</isActive>
                    <label>21 - DSD NO RECEIVER</label>
                </value>
                <value>
                    <fullName>22 - DSD MISSED WINDOW</fullName>
                    <isActive>false</isActive>
                    <label>22 - DSD MISSED WINDOW</label>
                </value>
                <value>
                    <fullName>24 - DSD SAMPLING</fullName>
                    <isActive>false</isActive>
                    <label>24 - DSD SAMPLING</label>
                </value>
                <value>
                    <fullName>26 - DSD Lump Sum Unsaleable</fullName>
                    <isActive>false</isActive>
                    <label>26 - DSD Lump Sum Unsaleable</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
	<fields>
        <fullName>MDLZ_DeliveredQty__c</fullName>
        <description>Final delivered quantity is stored here</description>
        <label>Delivered Quantity</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDLZ_ExternalFormula__c</fullName>
        <formula>(ACCL__Order__r.ACCL__Order_Id__c) &amp;&quot;-&quot;&amp;(ACCL__Product__r.ACCL__Product_Code__c)</formula>
        <label>MDLZ_ExternalFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDLZ_ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MDLZ_FreshCreditReasonCode__c</fullName>
        <label>Fresh Credit Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>16 - DSD Discontinued</fullName>
                </value>
                <value>
                    <fullName>01 - DSD Overstock</fullName>
                </value>
                <value>
                    <fullName>23 - DSD Customer Refused</fullName>
                </value>
                <value>
                    <fullName>15 - DSD Did Not Order</fullName>
                </value>
                <value>
                    <fullName>18 - DSD Short on Delivery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MDLZ_ItemStatus__c</fullName>
        <label>Item Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Empty</fullName>
                    <default>true</default>
                    <label>Empty</label>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
	<fields>
        <fullName>MDLZ_LastSavedByUser__c</fullName>
        <description>Indicates whether item was added or updated by user on device</description>
        <label>Last Saved By User</label>
        <type>DateTime</type>
    </fields>
	<fields>
        <fullName>MDLZ_ErrorMessage__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDLZ_LineItemNumber__c</fullName>
        <label>Line Item Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
	<fields>
        <fullName>MDLZ_MobileQty__c</fullName>
        <description>Each quantity edit by user is stored here</description>
        <label>Mobile Quantity</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
	<fields>
        <fullName>MDLZ_OriginalQty__c</fullName>
        <description>Original value for each line item coming from source order</description>
        <label>Original Quantity</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDLZ_UnsaleableReasonCode__c</fullName>
        <label>Unsaleable Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>03 - DSD Shelf-Life Code Expired</fullName>
                </value>
                <value>
                    <fullName>16 - DSD Discontinued</fullName>
                </value>
                <value>
                    <fullName>38 - DSD Delivered Out of Code</fullName>
                </value>
                <value>
                    <fullName>36 - DSD Glue Related Issues</fullName>
                </value>
                <value>
                    <fullName>04 - DSD Infest, Water, Fire</fullName>
                </value>
                <value>
                    <fullName>07 - DSD Product Recall</fullName>
                </value>
                <value>
                    <fullName>40 - DSD Pallet Damage</fullName>
                </value>
                <value>
                    <fullName>41 - DSD Sticker Damage</fullName>
                </value>
                <value>
                    <fullName>42 - DSD Handling Damage</fullName>
                </value>
                <value>
                    <fullName>43 - DSD Shrink Wrap Damage</fullName>
                </value>
                <value>
                    <fullName>44 - DSD Open seals</fullName>
                </value>
                <value>
                    <fullName>45 - DSD Unknown Damage</fullName>
                </value>
                <value>
                    <fullName>46 - DSD All Other MFG Damage</fullName>
                </value>
                <value>
                    <fullName>47 - DSD Consumer Return</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Order Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MDLZ_ExternalFormula__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>MDLZ_ExternalId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OI-{0000}</displayFormat>
        <label>Order Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ACCL__Quantity_Length_Check</fullName>
        <active>true</active>
        <errorConditionFormula>ACCL__Quantity__c  &gt;  9999</errorConditionFormula>
        <errorMessage>Quantity should not be more than 9999.</errorMessage>
    </validationRules>
</CustomObject>